// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering bands - areas Single band area chart Can render two points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y0",
      "datum": Array [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 2,
    },
    "x": 0,
    "y": 80,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y0",
      "datum": Array [
        1,
        3,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 3,
    },
    "x": 50,
    "y": 70,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{__global__}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 25,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        1,
        3,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
]
`;

exports[`Rendering bands - areas Single band area chart with null values Can render two points 1`] = `
Array [
  Object {
    "color": "red",
    "orphan": true,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y0",
      "datum": Array [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 2,
    },
    "x": 0,
    "y": 80,
  },
  Object {
    "color": "red",
    "orphan": true,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y0",
      "datum": Array [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 3,
    },
    "x": 50,
    "y": 70,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y0",
      "datum": Array [
        3,
        3,
        5,
      ],
      "mark": null,
      "x": 3,
      "y": 3,
    },
    "x": 75,
    "y": 70,
  },
  Object {
    "color": "red",
    "orphan": false,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 2,
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "style": Object {
      "fill": Object {
        "color": Object {
          "b": 255,
          "g": 255,
          "opacity": 1,
          "r": 255,
        },
      },
      "shape": "circle",
      "stroke": Object {
        "color": Object {
          "b": 0,
          "g": 0,
          "opacity": 1,
          "r": 255,
        },
        "width": 1,
      },
    },
    "transform": Object {
      "x": 12.5,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        3,
        3,
        5,
      ],
      "mark": null,
      "x": 3,
      "y": 5,
    },
    "x": 75,
    "y": 50,
  },
]
`;

exports[`Rendering bands - areas Single series band bar chart - ordinal Can render two bars 1`] = `
Array [
  Object {
    "color": "red",
    "displayValue": undefined,
    "height": 80,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "seriesStyle": Object {
      "displayValue": Object {
        "fill": "#777",
        "fontFamily": "sans-serif",
        "fontSize": 8,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": Object {
        "opacity": 1,
      },
      "rectBorder": Object {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        0,
        2,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "width": 25,
    "x": 0,
    "y": 0,
  },
  Object {
    "color": "red",
    "displayValue": undefined,
    "height": 20,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "seriesStyle": Object {
      "displayValue": Object {
        "fill": "#777",
        "fontFamily": "sans-serif",
        "fontSize": 8,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": Object {
        "opacity": 1,
      },
      "rectBorder": Object {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        2,
        3,
        5,
      ],
      "mark": null,
      "x": 2,
      "y": 5,
    },
    "width": 25,
    "x": 50,
    "y": 50,
  },
  Object {
    "color": "red",
    "displayValue": undefined,
    "height": 40,
    "panel": Object {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "seriesIdentifier": Object {
      "key": "groupId{group_1}spec{spec_1}yAccessor{2}splitAccessors{}",
      "seriesKeys": Array [
        2,
      ],
      "smHorizontalAccessorValue": undefined,
      "smVerticalAccessorValue": undefined,
      "specId": "spec_1",
      "splitAccessors": Map {},
      "yAccessor": 2,
    },
    "seriesStyle": Object {
      "displayValue": Object {
        "fill": "#777",
        "fontFamily": "sans-serif",
        "fontSize": 8,
        "fontStyle": "normal",
        "offsetX": 0,
        "offsetY": 0,
        "padding": 0,
      },
      "rect": Object {
        "opacity": 1,
      },
      "rectBorder": Object {
        "strokeWidth": 1,
        "visible": false,
      },
    },
    "transform": Object {
      "x": 0,
      "y": 0,
    },
    "value": Object {
      "accessor": "y1",
      "datum": Array [
        3,
        4,
        8,
      ],
      "mark": null,
      "x": 3,
      "y": 8,
    },
    "width": 25,
    "x": 75,
    "y": 20,
  },
]
`;
